Restored missing Contact and Services sections

--- a/index.html
+++ b/index.html
@@ -141,4 +141,100 @@
                             <i class="fas fa-file-alt text-2xl"></i>
                         </div>
                         <h3 class="text-xl font-bold mb-4">Informational One-Pagers</h3>
-                        <p class="text-gray-300 mb-4">Concise and effective single-page websites to quickly
+                        <p class="text-gray-300 mb-4">Concise and effective single-page websites to quickly introduce your business, services, and contact information.</p>
+                        <ul class="text-gray-400 space-y-2">
+                            <li class="flex items-center"><i class="fas fa-check text-blue-400 mr-2"></i> Quick Launch</li>
+                            <li class="flex items-center"><i class="fas fa-check text-blue-400 mr-2"></i> Essential Business Info</li>
+                            <li class="flex items-center"><i class="fas fa-check text-blue-400 mr-2"></i> Lead Generation Focused</li>
+                        </ul>
+                    </div>
+
+                    <div class="service-card bg-navy p-8 rounded-lg transition duration-300 hover:bg-opacity-90 border border-gray-700/50 backdrop-blur-sm">
+                        <div class="bg-blue-500 p-4 rounded-full inline-block mb-6 shadow-lg">
+                            <i class="fas fa-shopping-cart text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-4">E-commerce Websites</h3>
+                        <p class="text-gray-300 mb-4">Robust online stores designed to sell your products or services securely and efficiently to a global audience.</p>
+                        <ul class="text-gray-400 space-y-2">
+                            <li class="flex items-center"><i class="fas fa-check text-blue-400 mr-2"></i> Secure Payment Gateways</li>
+                            <li class="flex items-center"><i class="fas fa-check text-blue-400 mr-2"></i> Product Management</li>
+                            <li class="flex items-center"><i class="fas fa-check text-blue-400 mr-2"></i> User-Friendly Shopping Experience</li>
+                        </ul>
+                    </div>
+
+                    <div class="service-card bg-navy p-8 rounded-lg transition duration-300 hover:bg-opacity-90 border border-gray-700/50 backdrop-blur-sm">
+                        <div class="bg-blue-500 p-4 rounded-full inline-block mb-6 shadow-lg">
+                            <i class="fas fa-image text-2xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-4">Portfolio & Showcase Sites</h3>
+                        <p class="text-gray-300 mb-4">Visually stunning websites to display your creative work, projects, or professional achievements.</p>
+                        <ul class="text-gray-400 space-y-2">
+                            <li class="flex items-center"><i class="fas fa-check text-blue-400 mr-2"></i> High-Resolution Galleries</li>
+                            <li class="flex items-center"><i class="fas fa-check text-blue-400 mr-2"></i> Engaging Layouts</li>
+                            <li class="flex items-center"><i class="fas fa-check text-blue-400 mr-2"></i> Personal Branding</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="gradient-bg py-20 relative overflow-hidden">
+            <div class="floating-shape w-64 h-64 bg-blue-300 rounded-full top-32 left-1/4 animate-float"></div>
+            <div class="floating-shape w-80 h-80 bg-blue-500 rounded-full bottom-32 right-1/4 animate-float-reverse"></div>
+            
+            <div class="container mx-auto px-6 z-10">
+                <h2 class="text-3xl md:text-4xl font-bold text-center mb-4">Get In <span class="text-blue-300">Touch</span></h2>
+                <p class="text-center text-gray-300 mb-16 max-w-2xl mx-auto">Ready to start your project? Contact us today and let's create something amazing together.</p>
+
+                <div class="flex flex-col md:flex-row">
+                    <div class="md:w-1/2 mb-10 md:mb-0 md:pr-10">
+                        <div class="bg-navy p-8 rounded-lg shadow-lg backdrop-blur-sm bg-opacity-80 border border-gray-700/50">
+                            <h3 class="text-2xl font-bold mb-6">Contact Information</h3>
+                            <div class="space-y-6">
+                                <div class="flex items-start">
+                                    <div class="bg-blue-500 p-3 rounded-full mr-4 shadow-lg">
+                                        <i class="fas fa-envelope"></i>
+                                    </div>
+                                    <div>
+                                        <h4 class="font-bold mb-1">Email Us</h4>
+                                        <a href="mailto:mlsitecreation@gmail.com" class="text-blue-300 hover:underline">mlsitecreation@gmail.com</a>
+                                    </div>
+                                </div>
+                                <div class="flex items-start">
+                                    <div class="bg-blue-500 p-3 rounded-full mr-4 shadow-lg">
+                                        <i class="fas fa-comment"></i>
+                                    </div>
+                                    <div>
+                                        <h4 class="font-bold mb-1">Our Promise</h4>
+                                        <p class="text-gray-300">We respond to all inquiries within 24 hours to discuss your project needs.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="md:w-1/2">
+                        <form id="contact-form" name="contact" data-netlify="true" class="bg-navy p-8 rounded-lg shadow-lg backdrop-blur-sm bg-opacity-80 border border-gray-700/50">
+                            <div class="mb-6">
+                                <label for="name" class="block mb-2 font-medium">Your Name</label>
+                                <input type="text" id="name" name="name" class="w-full px-4 py-3 bg-darknavy border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300" required>
+                            </div>
+                            <div class="mb-6">
+                                <label for="email" class="block mb-2 font-medium">Email Address</label>
+                                <input type="email" id="email" name="email" class="w-full px-4 py-3 bg-darknavy border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300" required>
+                            </div>
+                            <div class="mb-6">
+                                <label for="message" class="block mb-2 font-medium">Your Message</label>
+                                <textarea id="message" name="message" rows="4" class="w-full px-4 py-3 bg-darknavy border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300" required></textarea>
+                            </div>
+                            <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold transition duration-300 transform hover:scale-105 shadow-lg hover:shadow-blue-500/30">Send Message</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
