Optimized HTML/CSS and fixed Netlify form submission bug in script.js

--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+Yes, I will make those changes and send you the corrected files.
+
+I've implemented the optimizations, removed redundant code, and applied the critical fix to the contact form to ensure submissions work correctly via Netlify's backend.
+
+Here are the complete, corrected code blocks for your three files. Please copy the content below and use it to replace the code in your local files.
+
+1. 📄 Updated index.html
+I removed the redundant tailwind.config script block and the duplicate keyframe definitions, as these are now consolidated in the other files. This makes your HTML cleaner and slightly faster to load.
+
+HTML
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +16,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ML Sites - Premium Web Development</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    
     <script>
-        // Tailwind config moved back here for CDN compatibility if style.css is truly separate
         tailwind.config = {
             theme: {
                 extend: {
@@ -14,32 +27,11 @@
                         navy: '#001f3f',
                         darknavy: '#001a35',
                     },
-                    animation: {
-                        'float': 'float 6s ease-in-out infinite',
-                        'float-reverse': 'float-reverse 6s ease-in-out infinite',
-                        'pulse-slow': 'pulse 5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-                        'fade-in-up': 'fade-in-up 0.8s ease-out forwards', // Added for scroll animation
-                    },
-                    keyframes: {
-                        float: {
-                            '0%, 100%': { transform: 'translateY(0)' },
-                            '50%': { transform: 'translateY(-20px)' },
-                        },
-                        'float-reverse': {
-                            '0%, 100%': { transform: 'translateY(0)' },
-                            '50%': { transform: 'translateY(20px)' },
-                        },
-                        'fade-in-up': { // Keyframe for fade-in-up animation
-                            '0%': { opacity: '0', transform: 'translateY(20px)' },
-                            '100%': { opacity: '1', transform: 'translateY(0)' },
-                        }
-                    }
+                    // Keyframes and Animations are now defined in style.css or used directly
                 }
             }
         }
     </script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body class="font-sans text-white bg-navy">
     <div class="blob hidden md:block top-[-250px] right-[-250px]"></div>
@@ -214,7 +206,7 @@
                     </div>
 
                     <div class="md:w-1/2">
-                        <form id="contact-form" name="contact" data-netlify="true" class="bg-navy p-8 rounded-lg shadow-lg backdrop-blur-sm bg-opacity-80 border border-gray-700/50">
+                        <form id="contact-form" name="contact" method="POST" data-netlify="true" class="bg-navy p-8 rounded-lg shadow-lg backdrop-blur-sm bg-opacity-80 border border-gray-700/50">
                             <div class="mb-6">
                                 <label for="name" class="block mb-2 font-medium">Your Name</label>
                                 <input type="text" id="name" name="name" class="w-full px-4 py-3 bg-darknavy border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300" required>
