Restored dual founders in About section.

--- a/index.html
+++ b/index.html
@@ -85,26 +85,38 @@
             <div class="floating-shape w-96 h-96 bg-blue-300 rounded-full -bottom-48 -right-48 animate-float-reverse"></div>
             
             <div class="container mx-auto px-6 z-10">
-                <h2 class="text-3xl md:text-4xl font-bold text-center mb-16">About <span class="text-blue-300">ML Sites</span></h2>
+                <h2 class="text-3xl md:text-4xl font-bold text-center mb-16">Meet The <span class="text-blue-300">Founders</span></h2>
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/2 mb-10 md:mb-0 md:pr-10">
                         <div class="bg-darknavy p-8 rounded-lg shadow-lg backdrop-blur-sm bg-opacity-80 border border-gray-700/50">
                             <h3 class="text-2xl font-bold mb-4">Our Story</h3>
-                            <p class="mb-6 text-gray-300">ML Sites was founded by Mutshidzi Mafune with a vision to bridge the gap between strategic business thinking and beautiful digital design.</p>
-                            <p class="text-gray-300">We combine a strong corporate mindset with creative designs to deliver websites that not only look stunning but also drive business results.</p>
+                            <p class="mb-6 text-gray-300">ML Sites was founded by **Mutshidzi Mafune** and **Vhugala Lephauphau** with a shared vision to bridge the gap between strategic business thinking and beautiful digital design.</p>
+                            <p class="text-gray-300">As a duo, we combine a strong corporate mindset with creative design to deliver websites that not only look stunning but also drive business results.</p>
                         </div>
                     </div>
                     <div class="md:w-1/2">
                         <div class="flex flex-col space-y-6">
-                            <div class="bg-darknavy p-6 rounded-lg shadow-lg backdrop-blur-sm bg-opacity-80 border border-gray-700/50">
+                            
+                            <div class="bg-darknavy p-6 rounded-lg shadow-lg border border-gray-700/50 hover:border-blue-500 transition duration-300">
                                 <div class="flex items-center mb-4">
-                                    <div class="bg-blue-500 p-3 rounded-full mr-4 shadow-lg">
+                                    <div class="bg-blue-500 p-3 rounded-full mr-4 shadow-lg flex-shrink-0">
                                         <i class="fas fa-paint-brush text-white"></i>
                                     </div>
-                                    <h3 class="text-xl font-bold">Mutshidzi Mafune (Founder)</h3>
+                                    <h3 class="text-xl font-bold">Mutshidzi Mafune (Creative Focus)</h3>
                                 </div>
-                                <p class="text-gray-300">My exceptional design skills and commitment to strategy bring creativity and aesthetic excellence to every project, ensuring your website stands out from the competition.</p>
+                                <p class="text-gray-300">Focusing on aesthetic excellence, I bring exceptional design skills and a commitment to creating user-centric, visually stunning digital experiences.</p>
                             </div>
+
+                            <div class="bg-darknavy p-6 rounded-lg shadow-lg border border-gray-700/50 hover:border-blue-500 transition duration-300">
+                                <div class="flex items-center mb-4">
+                                    <div class="bg-blue-500 p-3 rounded-full mr-4 shadow-lg flex-shrink-0">
+                                        <i class="fas fa-chart-line text-white"></i>
+                                    </div>
+                                    <h3 class="text-xl font-bold">Vhugala Lephauphau (Strategic Focus)</h3>
+                                </div>
+                                <p class="text-gray-300">My focus is on corporate strategy and measurable results, ensuring every site we build functions as a powerful, goal-driven business asset.</p>
+                            </div>
+
                         </div>
                     </div>
                 </div>
